In order to reproduce: [1] Create new text document. [2] Display Navigator: F5 [3] Display only headings in Navigator: Click 'Content Navigation View' in Navigator if necessary. [4] Insert about 10 headings with heading style Heading 1. The headings are displayed in the Navigator and they flicker. Expected: No flickering. Bug does not exist in version 6.2.5. Hence regresssion.
confirming with: Version: 6.3.0.4 (x64) Build ID: 057fc023c990d676a43019934386b85b21a9ee99 CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; Locale: de-DE (de_DE); UI-Language: en-US Calc: make sure to set focus back to writer document after displaying Navigator. if cursor blinks, Headings will flicker ~ 3-4 times, then pause for some seconds and than start again flickering. btw: with LO 6.3. we have flickering with form controls in spreadsheets too: Bug 121963 - button flashing - mouse wheel zooming breaks
seems, it flickers only with *disabled* OpenGL (or if OpenGL is not available) Menu Tools/Options.../LibreOffice/View [ ] Use OpenGL for all rendering and seems to have started with: https://gerrit.libreoffice.org/gitweb?p=core.git;a=commit;h=360b9d52e9d0e7e70ad8432802886073bbd6ee3d commit 360b9d52e9d0e7e70ad8432802886073bbd6ee3d [log] author Jim Raykowski <raykowj@gmail.com> Sat Mar 23 23:42:24 2019 -0800 committer Michael Stahl <Michael.Stahl@cib.de> Fri May 24 13:10:20 2019 +0200 tree d2585263e6855f613ac79ae4bb4ac4b39992e88c parent 5780a495872bbcc9df595c534425515727516a4a [diff] tdf#124305 Make multiselected outline moves keep selections Bug 124305 - Multi-selection lost after promote/demote chapter/level in Navigator /cygdrive/d/sources/bibisect/bibisect-win32-6.3 $ git bisect good cf54dd2eaca2b860dc676c90e679c5fb57fa7879 is the first bad commit commit cf54dd2eaca2b860dc676c90e679c5fb57fa7879 Author: Norbert Thiebaud <nthiebaud@gmail.com> Date: Fri May 24 05:25:51 2019 -0700 source sha:360b9d52e9d0e7e70ad8432802886073bbd6ee3d source sha:360b9d52e9d0e7e70ad8432802886073bbd6ee3d :040000 040000 6124dd7bb9ecc62479819d723261c28782a2a8c8 e1e7e3b658bcb66fef6218b804bbbfdf12787263 M instdir /cygdrive/d/sources/bibisect/bibisect-win32-6.3 $ git bisect log # bad: [18f926e8e18b3d855c2f79ef279febbeb846b8cd] source sha:13152ad88b24cadc836a829b4424a72a152ca9b1 # good: [ea94942caaf195b8d8b2d5c2abb523359ab390e7] source sha:a20a2d7e0d28658f2d9089da076961a599833a28 git bisect start 'master' 'oldest' # good: [3aea60569b9190400409ebb93f0a5d323b6fc5d4] source sha:47ce4b87d8a13fc340794ffd9a10d5bd6a15e644 git bisect good 3aea60569b9190400409ebb93f0a5d323b6fc5d4 # good: [3b794d71dd796e467baef082c140bdc77c69c979] source sha:47d25dc5abe000ce751cb1e4dbd1f85f7198ca05 git bisect good 3b794d71dd796e467baef082c140bdc77c69c979 # good: [a42f6c6e5c4ec8fabee76bfa131fd188f758dc93] source sha:e2aa8f8cb3b93ec3cb14c5c9edc3bbce78c1558f git bisect good a42f6c6e5c4ec8fabee76bfa131fd188f758dc93 # bad: [2298f1d74551c1efe5267ae47640e88bdd2a3346] source sha:344275e11e24084c970ff19acfeed3ddf50d58bb git bisect bad 2298f1d74551c1efe5267ae47640e88bdd2a3346 # bad: [a5f169bfaed099cb3497934ed7e01a87a968bbb3] source sha:53a6f11b8d81a94189e4f6ee954b6d5c2ad6ffe0 git bisect bad a5f169bfaed099cb3497934ed7e01a87a968bbb3 # good: [462e86ec8028dba9ffdf319b8299ad32dd3279e2] source sha:3af6091f45d93508ab746c13e208d9516c009222 git bisect good 462e86ec8028dba9ffdf319b8299ad32dd3279e2 # good: [c54287fb015c3d4054cbfb15741d45c637b2f9a2] source sha:23fc425ff9b16371a6f83e054d63ef9d253b6236 git bisect good c54287fb015c3d4054cbfb15741d45c637b2f9a2 # bad: [3b1d22b5c0b8dedd2a38e49c97b13c0ffd6003e7] source sha:9f927ea6d0087938911ee07e97416d705553ec9c git bisect bad 3b1d22b5c0b8dedd2a38e49c97b13c0ffd6003e7 # bad: [ef5e48fdefd17b4267425f0113732633b4f3c825] source sha:51c639d1e85bc62fb8dec28faeed31ddb30c2854 git bisect bad ef5e48fdefd17b4267425f0113732633b4f3c825 # bad: [00263e7a0914fa472334fd80ff77974d55c96261] source sha:dfbce2a556972f552d194d2358c170077915d776 git bisect bad 00263e7a0914fa472334fd80ff77974d55c96261 # bad: [b1d35b4943dad26bd6fb74db6d69b85b8b9827d5] source sha:d6865e5cec34f5f521e0f9ec4ef3c7ad04503cfe git bisect bad b1d35b4943dad26bd6fb74db6d69b85b8b9827d5 # bad: [cf54dd2eaca2b860dc676c90e679c5fb57fa7879] source sha:360b9d52e9d0e7e70ad8432802886073bbd6ee3d git bisect bad cf54dd2eaca2b860dc676c90e679c5fb57fa7879 # good: [c14ad12503f4df5333b64d9671708647439b6886] source sha:5780a495872bbcc9df595c534425515727516a4a git bisect good c14ad12503f4df5333b64d9671708647439b6886 # first bad commit: [cf54dd2eaca2b860dc676c90e679c5fb57fa7879] source sha:360b9d52e9d0e7e70ad8432802886073bbd6ee3d
*** Bug 128019 has been marked as a duplicate of this bug. ***
Jim Raykowski committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/673e328b0d9c8e0080cbb72cc435f0f1010652d2 tdf#126942 Fix flickering headings in navigator It will be available in 6.4.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Hi Harald, Oliver, Could you please verify the fix ?
Jim Raykowski committed a patch related to this issue. It has been pushed to "libreoffice-6-3": https://git.libreoffice.org/core/commit/b897a788df8a5765a372ef15f104ff5eee2d4b51 tdf#126942 Fix flickering headings in navigator It will be available in 6.3.4. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Checked with version Version: 6.4.0.0.alpha1+ (x64) Build-ID: 7c6226bee72805db7f0e567ca9f06c786a7d0da2 CPU-Threads: 4; BS: Windows 10.0 Build 18362; UI-Render: Standard; VCL: win; Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE Calc: threaded LibroOffice works as expected now: No flicker of Headings in Navigator. Thanks for fixing.