tdf#126942 Fix flickering headings in navigator

Change-Id: Ib77154c13bd26f0bd5b700a69a86abd8a382052d
Reviewed-on: https://gerrit.libreoffice.org/81296
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit 673e328b0d9c8e0080cbb72cc435f0f1010652d2)
Reviewed-on: https://gerrit.libreoffice.org/81315
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>