sw/source/uibase/utlui/content.cxx
@@ -2129,9 +2129,9 @@ bool SwContentTree::HasContentChanged()
                 else if (IsSelected(pFirstEntry))
                 {
                     SvTreeListBox::SelectListEntry(pFirstEntry, false);
+                    bInvalidate = true;
                 }
             }
-            bInvalidate = true;
 
         }
 
